# gpuowl

./: .gitignore  .travis.yml  AMD3.0  AllocTrac.cpp  AllocTrac.h  Args.cpp  Args.h  B1Accumulator.cpp  B1Accumulator.h  Background.h  Blake2.h  Buffer.h  CMakeLists.txt  Context.h  CudaGpu.cu  CudaGpu.h  D.cpp  FFT.md  FFT.txt  FFTConfig.cpp  FFTConfig.h  FP64.cl  File.h  GCD.cpp  GCD.h  GmpUtil.cpp  GmpUtil.h  Gpu.cpp  Gpu.h  Hash.h  Kset.cpp  Kset.h  LowGpu.cpp  LowGpu.h  Makefile  Makefile-old  Memlock.cpp  NoTF.cpp  OpenGpu.cpp  OpenGpu.h  (+105 more)
.github/workflows/: ci.yml
SP/: Gpu.cpp  Gpu.h  SConstruct  main.cpp  sp.cl  sp2.cl
attic/: gpuowl-lowLDS.cl
bug/: Makefile  bug.cl  bug.cpp  build  clwrap.h  timeutil.h  tinycl.h
cuda/: Makefile  cudaOwl.cu  fftbench.cu  timeutil.h
debian/: changelog  control  copyright  files  rules
debian/tests/: control
kselect/: Makefile  README.txt  distrib.cpp  kselect.cpp  prime-order.gp
pm1/: Makefile  Primes.cpp  Primes.h  calculator.ipynb  merge.py  pm1-old  pm1.cpp  pm1.py  pm1driver.cpp  pm1prob.cpp  pm1prob.h
src/: AllocTrac.cpp  AllocTrac.h  Args.cpp  Args.h  Background.h  Blake2.h  Buffer.h  CMakeLists.txt  Context.h  CycleFile.cpp  CycleFile.h  Event.cpp  Event.h  FFTConfig.cpp  FFTConfig.h  File.cpp  File.h  Gpu.cpp  Gpu.h  GpuCommon.h  Hash.h  Kernel.cpp  Kernel.h  KernelCompiler.cpp  KernelCompiler.h  MD5.h  Memlock.h  PRPState.cpp  PRPState.h  Primes.cpp  Primes.h  Profile.cpp  Profile.h  Proof.cpp  Proof.h  ProofCache.cpp  ProofCache.h  Queue.cpp  Queue.h  SaveMan.cpp  (+54 more)
src/cl/: base.cl  carry.cl  carryb.cl  carryfused.cl  carryinc.cl  carryutil.cl  etc.cl  fft-middle.cl  fft10.cl  fft11.cl  fft12.cl  fft13.cl  fft14.cl  fft15.cl  fft16.cl  fft3.cl  fft4.cl  fft5.cl  fft6.cl  fft7.cl  fft8.cl  fft9.cl  fftbase.cl  fftheight.cl  ffthin.cl  ffthout.cl  fftmiddlein.cl  fftmiddleout.cl  fftp.cl  fftw.cl  fftwidth.cl  gpuowl.cl  math.cl  middle.cl  multiply.cl  onepairmul.cl  selftest.cl  tailfusedmul.cl  tailmul.cl  tailsquare.cl  (+4 more)
test-pm1/: README  makeWork.py  pm1.txt  work50K1M.txt
tools/: README  README.md  abstract.py  abstract.sh  compare.cpp  copy_proofs.sh  count_archived_proofs.sh  counts.py  delta.sh  device.py  df.sh  expand.py  monitor.py  primenet.py  remove_checkpoints_by_size.sh  upload.py
